SERVER-54818 Mitigate distributed lock acquisition unfairness